--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.vince.andwidget"
           xmlns:android="http://schemas.android.com/apk/res/android">
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
@@ -19,6 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".video.VideoTestActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".scratch.ScratchTestActivity"
                   android:screenOrientation="portrait">
         </activity>
     </application>
